--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="img/pokeball.png" type="image/x-icon">
 	<link rel="stylesheet" href="style.css">
+			<!-- *chart -->
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	<!-- *javascript -->
 	<script src="script.js"></script>
+
+
 
 	<title>mbPokedex</title>
 </head>
