--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="img/pokeball.png" type="image/x-icon">
 	<link rel="stylesheet" href="style.css">
-			<!-- *chart -->
+
+	<!-- *let variables -->
+<script src="var.js"></script>
+
+	<!-- *chart -->
 	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 	<!-- *javascript -->
 	<script src="script.js"></script>
-
+	
+<!-- *render Chart -->
+<script src="renderChart.js"></script>
 
 
 	<title>mbPokedex</title>
